--- a/index.html
+++ b/index.html
@@ -11,10 +11,19 @@
       <img src="img/challenges.jpg" alt="All Star Shoes" height="250" width="250" class="image"/>
     
       <p class="price"><strong>$65.00</strong></p>
+      <p class="sale">Sale</p>
       <p class="shipping">Free Shipping</p>
       <a class="more-info"
       href="https://www.converse.com" >More Info. &rarr;</a>
     
+      <div class="colors">
+         <div class="color"></div>
+         <div class="color color-blue"></div>
+         <div class="color color-red"></div>
+         <div class="color color-yellow"></div>
+         <div class="color color-green"></div>
+         <div class="color color-brown"></div>
+      </div>
       <h3 class="details-title">Product details</h3>
       <ul class="details-list">
         <li>Light Weight</li>
