--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <article class="article">
       <h2 class="title">Converse All Star</h2>
-      <div class="container clearfix">
+      <div class="container ">
         <img
           src="img/challenges.jpg"
           alt="All Star Shoes"
@@ -26,7 +26,7 @@
             >More Info. &rarr;</a
           >
 
-          <div class="colors">
+          <div class="product-colors">
             <div class="color"></div>
             <div class="color color-blue"></div>
             <div class="color color-red"></div>
